# Concurrentes-18C2

./: Dockerfile  LakeConcu  README.md  build.sh  dockerize.sh  min.suppressions  run.sh
src/: CMakeLists.txt  Harbour.cpp  Harbour.h  Inspector.cpp  Inspector.h  LakeConcu.cpp  MemoriaCompartida.h  MemoriaCompartidaMapa.cpp  MemoriaCompartidaMapa.h  Passenger.cpp  Passenger.h  Process.cpp  Process.h  ProcessGenerator.cpp  ProcessGenerator.h  SharedMemoryMap.cpp  SharedMemoryMap.h  SharedMemoryPassenger.cpp  SharedMemoryPassenger.h  SharedMemoryShip.cpp  SharedMemoryShip.h  Ship.cpp  Ship.h  ShipInspector.cpp  ShipInspector.h  TicketInspector.cpp  TicketInspector.h  Tourist.cpp  Tourist.h  Worker.cpp  Worker.h
src/Fifos/: CMakeLists.txt  Fifo.cpp  FifoEscritura.cpp  FifoLectura.cpp  FifoLectura.h
src/Handlers/: CMakeLists.txt  EventHandler.h  SIGALRM_Handler.h  SIGINT_Handler.h  SIGPIPE_Handler.h  SignalHandler.cpp  SignalHandler.h
src/Lock/: CMakeLists.txt  ExclusiveLock.cpp  ExclusiveLock.h  Lock.cpp  Lock.h  SharedLock.cpp  SharedLock.h
src/Logger/: CMakeLists.txt  Lock.h  LogMessages.cpp  LogMessages.h  Logger.cpp  Logger.h  main.cpp
src/Pipes/: CMakeLists.txt
src/Semaphore/: BinarySemaphore.h  CMakeLists.txt  Semaforo.cpp  Semaforo.h  Semaphore.cpp  Semaphore.h
src/test/: LockTest.cpp  LoggerTest.cpp  SemaphoreTest.cpp
